--- a/index.html
+++ b/index.html
@@ -11,6 +11,22 @@
 			href="./images/favicon-32x32.png"
 		/>
 		<title>Frontend Mentor | Sunnyside agency landing page</title>
+		<!-- Google Fonts -->
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Barlow:wght@600&family=Fraunces:opsz,wght@9..144,700;9..144,900&display=swap"
+			rel="stylesheet"
+		/>
+		<!-- Normalize CSS -->
+		<link rel="stylesheet" href="css/normalize.css" />
+		<!-- My styles -->
+		<link rel="stylesheet" href="css/styles.css" />
+		<!-- Font Awesome Icons -->
+		<script
+			src="https://kit.fontawesome.com/2940e283c9.js"
+			crossorigin="anonymous"
+		></script>
 	</head>
 	<body>
 		<header>
