feat: Navbar estructurado
- Se descarto el uso de Font Awesome ya que el proyecto ya cuenta con
  iconos svg xd

--- a/index.html
+++ b/index.html
@@ -22,15 +22,27 @@
 		<link rel="stylesheet" href="css/normalize.css" />
 		<!-- My styles -->
 		<link rel="stylesheet" href="css/styles.css" />
-		<!-- Font Awesome Icons -->
-		<script
-			src="https://kit.fontawesome.com/2940e283c9.js"
-			crossorigin="anonymous"
-		></script>
 	</head>
 	<body>
-		<header>
-			<nav>About Services Projects Contact</nav>
+		<header class="header">
+			<nav class="header__navbar">
+				<a href="/" class="navbar__logo">sunnyside</a>
+				<img src="images/icon-hamburger.svg" alt="☰" class="navbar__bars" />
+				<ul class="navbar__list">
+					<li class="navbar__item">
+						<a href="/" class="navbar__link">About</a>
+					</li>
+					<li class="navbar__item">
+						<a href="/" class="navbar__link">Services</a>
+					</li>
+					<li class="navbar__item">
+						<a href="/" class="navbar__link">Projects</a>
+					</li>
+					<li class="navbar__item">
+						<a href="/" class="navbar__link">Contact</a>
+					</li>
+				</ul>
+			</nav>
 			<h1>We are creatives</h1>
 		</header>
 		<main>
