feat: Hero estructurado

--- a/index.html
+++ b/index.html
@@ -43,7 +43,10 @@
 					</li>
 				</ul>
 			</nav>
-			<h1>We are creatives</h1>
+			<div class="header__hero">
+				<h1 class="hero__title">We are creatives</h1>
+				<img src="images/icon-arrow-down.svg" alt="" class="hero__arrow" />
+			</div>
 		</header>
 		<main>
 			<section>
