--- a/index.html
+++ b/index.html
@@ -49,24 +49,42 @@
 			</div>
 		</header>
 		<main>
-			<section>
-				<div>
-					<h2>Transform your brand</h2>
-					<p>
-						We are a full-service creative agency specializing in helping brands
-						grow fast. Engage your clients through compelling visuals that do
-						most of the marketing for you.
-					</p>
-					<a href="">Learn more</a>
+			<section id="#about" class="about">
+				<div class="about__row">
+					<div class="about__img-container">
+						<img
+							src="images/mobile/image-transform.jpg"
+							alt="Photography of a egg"
+							class="about__img"
+						/>
+					</div>
+					<div class="about__body">
+						<h2 class="about__title">Transform your brand</h2>
+						<p class="about__text">
+							We are a full-service creative agency specializing in helping
+							brands grow fast. Engage your clients through compelling visuals
+							that do most of the marketing for you.
+						</p>
+						<a href="/" class="about__link about__link--yellow">Learn more</a>
+					</div>
 				</div>
-				<div>
-					<h2>Stand out to the right audience</h2>
-					<p>
-						Using a collaborative formula of designers, researchers,
-						photographers, videographers, and copywriters, we’ll build and
-						extend your brand in digital places.
-					</p>
-					<a href="">Learn more</a>
+				<div class="about__row">
+					<div class="about__img-container">
+						<img
+							src="images/mobile/image-stand-out.jpg"
+							alt="Photography of a egg"
+							class="about__img"
+						/>
+					</div>
+					<div class="about__body">
+						<h2 class="about__title">Stand out to the right audience</h2>
+						<p class="about__text">
+							Using a collaborative formula of designers, researchers,
+							photographers, videographers, and copywriters, we’ll build and
+							extend your brand in digital places.
+						</p>
+						<a href="/" class="about__link about__link--red">Learn more</a>
+					</div>
 				</div>
 			</section>
 			<section>
