feat: Services estructurado

--- a/index.html
+++ b/index.html
@@ -87,18 +87,18 @@
 					</div>
 				</div>
 			</section>
-			<section>
-				<div>
-					<h2>Graphic design</h2>
-					<p>
+			<section id="services">
+				<div class="services__service services__service--graphic-design">
+					<h2 class="service__title">Graphic design</h2>
+					<p class="service__text">
 						Great design makes you memorable. We deliver artwork that
 						underscores your brand message and captures potential clients’
 						attention.
 					</p>
 				</div>
-				<div>
-					<h2>Photography</h2>
-					<p>
+				<div class="services__service services__service--photography">
+					<h2 class="service__title">Photography</h2>
+					<p class="service__text">
 						Increase your credibility by getting the most stunning, high-quality
 						photos that improve your business image.
 					</p>
