--- a/index.html
+++ b/index.html
@@ -104,37 +104,52 @@
 					</p>
 				</div>
 			</section>
-			<section>
-				<h2>Client testimonials</h2>
-				<article>
-					<p>
+			<section id="testimonials" class="testimonials">
+				<h2 class="testimonials__title">Client testimonials</h2>
+				<article class="testimonials__testimonial">
+					<img
+						src="images/image-emily.jpg"
+						alt="Fotografía de Emily"
+						class="testimonial__photo"
+					/>
+					<p class="testimonial__text">
 						We put our trust in Sunnyside and they delivered, making sure our
 						needs were met and deadlines were always hit.
 					</p>
-					<div>
-						<p>Emily R.</p>
-						<p>Marketing Director</p>
-					</div>
+					<p class="testimonial__info">
+						<span class="testimonial__name">Emily R.</span>
+						<span class="testimonial__job">Marketing Director</span>
+					</p>
 				</article>
-				<article>
-					<p>
+				<article class="testimonials__testimonial">
+					<img
+						src="images/image-thomas.jpg"
+						alt="Fotografía de Thomas"
+						class="testimonial__photo"
+					/>
+					<p class="testimonial__text">
 						Sunnyside’s enthusiasm coupled with their keen interest in our
 						brand’s success made it a satisfying and enjoyable experience.
 					</p>
-					<div>
-						<p>Thomas S.</p>
-						<p>Chief</p>
-					</div>
-				</article>
-				<article>
-					<p>
-						Operating Officer Incredible end result! Our sales increased over
-						400% when we worked with Sunnyside. Highly recommended!
+					<p class="testimonial__info">
+						<span class="testimonial__name">Thomas S.</span>
+						<span class="testimonial__job">Chief Operating Officer</span>
 					</p>
-					<div>
-						<p>Jennie F.</p>
-						<p>Business Owner</p>
-					</div>
+				</article>
+				<article class="testimonials__testimonial">
+					<img
+						src="images/image-jennie.jpg"
+						alt="Fotografía de Jennie"
+						class="testimonial__photo"
+					/>
+					<p class="testimonial__text">
+						Incredible end result! Our sales increased over 400% when we worked
+						with Sunnyside. Highly recommended!
+					</p>
+					<p class="testimonial__info">
+						<span class="testimonial__name">Jennie F.</span>
+						<span class="testimonial__job">Business Owner</span>
+					</p>
 				</article>
 			</section>
 		</main>
