feat: Galeria estructurada

--- a/index.html
+++ b/index.html
@@ -152,6 +152,32 @@
 					</p>
 				</article>
 			</section>
+			<section id="gallery" class="gallery">
+				<div class="gallery__row">
+					<img
+						src="images/mobile/image-gallery-milkbottles.jpg"
+						alt="Botellas de leche"
+						class="gallery__img"
+					/>
+					<img
+						src="images/mobile/image-gallery-orange.jpg"
+						alt="Naranja en un plato"
+						class="gallery__img"
+					/>
+				</div>
+				<div class="gallery__row">
+					<img
+						src="images/mobile/image-gallery-cone.jpg"
+						alt="Cono de galleta"
+						class="gallery__img"
+					/>
+					<img
+						src="images/mobile/image-gallery-sugar-cubes.jpg"
+						alt="Cubos de azúcar"
+						class="gallery__img"
+					/>
+				</div>
+			</section>
 		</main>
 		<footer>
 			About Services Projects Contact
