--- a/index.html
+++ b/index.html
@@ -179,16 +179,48 @@
 				</div>
 			</section>
 		</main>
-		<footer>
-			About Services Projects Contact
-			<div class="attribution">
-				Challenge by
-				<a href="https://www.frontendmentor.io?ref=challenge" target="_blank">
-					Frontend Mentor
+		<footer id="footer" class="footer">
+			<a href="/" class="footer__name">sunnyside</a>
+			<div class="footer__links">
+				<a href="/" class="footer__link">About</a>
+				<a href="/" class="footer__link">Services</a>
+				<a href="/" class="footer__link">Projects</a>
+			</div>
+			<div class="footer__social">
+				<a href="https://facebook.com" target="_blank">
+					<img src="images/icon-facebook.svg" alt="facebook" />
 				</a>
-				. Coded by
-				<a href="#">Your Name Here</a>
-				.
+				<a href="https://instagram.com" target="_blank">
+					<img src="images/icon-instagram.svg" alt="instagram" />
+				</a>
+				<a href="https://twitter.com" target="_blank">
+					<img src="images/icon-twitter.svg" alt="twitter" />
+				</a>
+				<a href="https://pinterest.com" target="_blank">
+					<img src="images/icon-pinterest.svg" alt="pinterest" />
+				</a>
+			</div>
+			<div class="footer__attribution">
+				<p class="attribution__frontend-mentor">
+					Challenge by
+					<a
+						href="https://www.frontendmentor.io?ref=challenge"
+						target="_blank"
+						class="attribution__link"
+					>
+						Frontend Mentor
+					</a>
+				</p>
+				<p class="attribution__author">
+					Coded by
+					<a
+						href="https://jsamuelap.github.io"
+						target="_blank"
+						class="attribution__link"
+					>
+						JSamuel
+					</a>
+				</p>
 			</div>
 		</footer>
 	</body>
