fix: Ajustar medidas en el footer
- Se cambio el color de fondo

--- a/index.html
+++ b/index.html
@@ -187,16 +187,16 @@
 				<a href="/" class="footer__link">Projects</a>
 			</div>
 			<div class="footer__social">
-				<a href="https://facebook.com" target="_blank">
+				<a href="https://facebook.com" target="_blank" class="footer__icon">
 					<img src="images/icon-facebook.svg" alt="facebook" />
 				</a>
-				<a href="https://instagram.com" target="_blank">
+				<a href="https://instagram.com" target="_blank" class="footer__icon">
 					<img src="images/icon-instagram.svg" alt="instagram" />
 				</a>
-				<a href="https://twitter.com" target="_blank">
+				<a href="https://twitter.com" target="_blank" class="footer__icon">
 					<img src="images/icon-twitter.svg" alt="twitter" />
 				</a>
-				<a href="https://pinterest.com" target="_blank">
+				<a href="https://pinterest.com" target="_blank" class="footer__icon">
 					<img src="images/icon-pinterest.svg" alt="pinterest" />
 				</a>
 			</div>
