feat: Navbar para pantallas largas
- Se crearon enlaces para el navbar de pantallas largas.
- Se oculto el boton y los enlaces de pantallas chichas.

--- a/index.html
+++ b/index.html
@@ -27,6 +27,22 @@
 		<header class="header">
 			<nav class="header__navbar">
 				<a href="/" class="navbar__logo">sunnyside</a>
+				<ul class="navbar__desktop">
+					<li class="navbar__item">
+						<a href="#about" class="navbar__link">About</a>
+					</li>
+					<li class="navbar__item">
+						<a href="#services" class="navbar__link">Services</a>
+					</li>
+					<li class="navbar__item">
+						<a href="#proyects" class="navbar__link">Projects</a>
+					</li>
+					<li class="navbar__item navbar__item--highlighted">
+						<a href="#contact" class="navbar__link navbar__link--highlighted">
+							Contact
+						</a>
+					</li>
+				</ul>
 				<button id="navbar-btn" class="navbar__btn">
 					<img src="images/icon-hamburger.svg" alt="☰" class="navbar__bars" />
 				</button>
