feat: About para pantallas largas
- Se usaron las etiquetas picture y source para mostrar otras imagenes
 a partir de cierto ancho.

--- a/index.html
+++ b/index.html
@@ -71,13 +71,17 @@
 		<main>
 			<section id="about" class="about">
 				<div class="about__row">
-					<div class="about__img-container">
+					<picture class="about__img-container">
+						<source
+							media="(min-width: 1440px)"
+							srcset="images/desktop/image-transform.jpg"
+						/>
 						<img
 							src="images/mobile/image-transform.jpg"
 							alt="Photography of a egg"
 							class="about__img"
 						/>
-					</div>
+					</picture>
 					<div class="about__body">
 						<h2 class="about__title">Transform your brand</h2>
 						<p class="about__text">
@@ -89,13 +93,17 @@
 					</div>
 				</div>
 				<div class="about__row">
-					<div class="about__img-container">
+					<picture class="about__img-container">
+						<source
+							media="(min-width: 1440px)"
+							srcset="images/desktop/image-stand-out.jpg"
+						/>
 						<img
 							src="images/mobile/image-stand-out.jpg"
 							alt="Photography of a egg"
 							class="about__img"
 						/>
-					</div>
+					</picture>
 					<div class="about__body">
 						<h2 class="about__title">Stand out to the right audience</h2>
 						<p class="about__text">
