feat: Servicios para pantallas largas

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 					</div>
 				</div>
 			</section>
-			<section id="services">
+			<section id="services" class="services">
 				<div class="services__service services__service--graphic-design">
 					<h2 class="service__title">Graphic design</h2>
 					<p class="service__text">
