feat: Galeria para pantallas largas
- Se cambio la estructura para maquetas las imagenes de la galeria.

--- a/index.html
+++ b/index.html
@@ -183,30 +183,50 @@
 				</div>
 			</section>
 			<section id="gallery" class="gallery">
-				<div class="gallery__row">
+				<picture class="gallery__img-container">
+					<source
+						media="(min-width: 1440px)"
+						srcset="images/desktop/image-gallery-milkbottles.jpg"
+					/>
 					<img
 						src="images/mobile/image-gallery-milkbottles.jpg"
 						alt="Botellas de leche"
 						class="gallery__img"
+					/>
+				</picture>
+				<picture class="gallery__img-container">
+					<source
+						media="(min-width: 1440px)"
+						srcset="images/desktop/image-gallery-orange.jpg"
 					/>
 					<img
 						src="images/mobile/image-gallery-orange.jpg"
 						alt="Naranja en un plato"
 						class="gallery__img"
 					/>
-				</div>
-				<div class="gallery__row">
+				</picture>
+				<picture class="gallery__img-container">
+					<source
+						media="(min-width: 1440px)"
+						srcset="images/desktop/image-gallery-cone.jpg"
+					/>
 					<img
 						src="images/mobile/image-gallery-cone.jpg"
 						alt="Cono de galleta"
 						class="gallery__img"
+					/>
+				</picture>
+				<picture class="gallery__img-container">
+					<source
+						media="(min-width: 1440px)"
+						srcset="images/desktop/image-gallery-sugarcubes.jpg"
 					/>
 					<img
 						src="images/mobile/image-gallery-sugar-cubes.jpg"
 						alt="Cubos de azúcar"
 						class="gallery__img"
 					/>
-				</div>
+				</picture>
 			</section>
 		</main>
 		<footer id="footer" class="footer">
