fix: Ajustar medidas del about

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 		</header>
 		<main>
 			<section id="about" class="about">
-				<div class="about__row">
+				<div class="about__row about__row--left">
 					<picture class="about__img-container">
 						<source
 							media="(min-width: 1440px)"
@@ -92,7 +92,7 @@
 						<a href="/" class="about__link about__link--yellow">Learn more</a>
 					</div>
 				</div>
-				<div class="about__row">
+				<div class="about__row about__row--right">
 					<picture class="about__img-container">
 						<source
 							media="(min-width: 1440px)"
