feat: estilos para enlaces activos del footer
- Cuando el mouse esta sobre los iconos de redes sociales, se
  modifica su src para mostrar el icono en version blanca.
- Cuando el mouse se pasa a otro icono o sale de ellos, se devuelve su
  src inicial.

--- a/index.html
+++ b/index.html
@@ -238,16 +238,32 @@
 			</div>
 			<div class="footer__social">
 				<a href="https://facebook.com" target="_blank" class="footer__icon">
-					<img src="images/icon-facebook.svg" alt="facebook" />
+					<img
+						src="images/icon-facebook.svg"
+						alt="facebook"
+						data-icon="facebook"
+					/>
 				</a>
 				<a href="https://instagram.com" target="_blank" class="footer__icon">
-					<img src="images/icon-instagram.svg" alt="instagram" />
+					<img
+						src="images/icon-instagram.svg"
+						alt="instagram"
+						data-icon="instagram"
+					/>
 				</a>
 				<a href="https://twitter.com" target="_blank" class="footer__icon">
-					<img src="images/icon-twitter.svg" alt="twitter" />
+					<img
+						src="images/icon-twitter.svg"
+						alt="twitter"
+						data-icon="twitter"
+					/>
 				</a>
 				<a href="https://pinterest.com" target="_blank" class="footer__icon">
-					<img src="images/icon-pinterest.svg" alt="pinterest" />
+					<img
+						src="images/icon-pinterest.svg"
+						alt="pinterest"
+						data-icon="pinterest"
+					/>
 				</a>
 			</div>
 			<div class="footer__attribution">
